# knowhere-rs

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  DEV_ROADMAP.md  FAISS_INTEGRATION.md  FFI-13-IMPLEMENTATION.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INTERRUPT.md  IVF_FLAT_CC_IMPLEMENTATION.md  README.md  RESULT_FFI-07.md  RESULT_FFI-08.md  RESULT_FFI-09.md  RESULT_FFI-11.md  RESULT_FFI-12.md  RESULT_FFI-17.md  RESULT_IDX-12.md  RESULT_IDX-16.md  SIMD_OPTIMIZATIONS.md  TASK_FFI-07.md  TASK_FFI-11.md  add_scann.py  build.rs  build.sh  builder_result.md  result.md
examples/: basic.rs  benchmark.rs  bitset_ops.c  hnsw.rs  interrupt_example.rs  interrupt_ffi_example.c
include/: knowhere_bitset.h
memory/: RESULT_FFI-16.md  checkpoint.md
src/: arena.rs  atomic_utils.rs  benchmark.rs  bitset.rs  bloom.rs  dataset.rs  disk_io.rs  error.rs  federation.rs  ffi.rs  half.rs  index.rs  index_tests.rs  integration.rs  interrupt.rs  layout.rs  lib.rs  lru_cache.rs  memory.rs  metrics.rs  once_cell.rs  prealloc.rs  ring.rs  serialize.rs  simd.rs  skiplist.rs  stats.rs  types.rs  utils.rs  version.rs
src/api/: admin.rs  index.rs  mod.rs  search.rs
src/codec/: index.rs  mod.rs  vector.rs
src/comp/: bloomfilter.rs  mod.rs
src/executor/: concurrent.rs  mod.rs  threadpool.rs
src/faiss/: aisaq.rs  annoy.rs  bin_flat.rs  bin_ivf_flat.rs  binary.rs  binary_hnsw.rs  diskann.rs  diskann_beam.rs  diskann_complete.rs  faiss_index.rs  ffi.rs  hnsw.rs  hnsw.rs.bak  hnsw.rs.new  hnsw_build.rs  hnsw_complete.rs  hnsw_parallel.rs  hnsw_pq.rs  hnsw_prq.rs  hnsw_quantized.rs  hnsw_safe.rs  hnsw_search.rs  index.rs  ivf.rs  ivf_flat.rs  ivf_flat_cc.rs  ivf_rabitq.rs  ivf_sq8.rs  ivf_sq_cc.rs  ivfpq.rs  ivfpq_complete.rs  mem_index.rs  mod.rs  pq.rs  pq_simd.rs  rabitq_ffi.rs  raw.rs  scann.rs  sparse.rs  sparse_inverted.rs  (+3 more)
src/ffi/: interrupt_ffi.rs  minhash_lsh_ffi.rs
src/index/: minhash_lsh.rs
src/jni/: mod.rs
src/quantization/: kmeans.rs  mod.rs  pq.rs  prq.rs  rabitq.rs  rq.rs  sq.rs
src/storage/: disk.rs  mem.rs  mmap.rs  mod.rs
tests/: test_ivf_rabitq.rs  test_minhash_lsh.rs
