[package]
name = "knowhere-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = []
ffi = []
faiss-cxx = ["ffi", "cxx"]
simd = ["wide"]

[dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
rayon = "1.8"
parking_lot = "0.12"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
cxx = { version = "1.0", optional = true }
wide = { version = "0.7", optional = true }

[build-dependencies]

[lib]
name = "knowhere_rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "knowhere-cli"
path = "src/bin/cli.rs"

[profile.release]
lto = true
codegen-units = 1
